# glance

./: .gitignore  README.md  glance.cabal  graph_algs.txt  hie.yaml  notes.txt  stack.yaml  todo.md  todo.txt
app/: Constants.hs  DrawingColors.hs  GraphAlgorithms.hs  Icons.hs  Main.hs  Rendering.hs  SimplifySyntax.hs  Translate.hs  TranslateCore.hs  Types.hs  Util.hs
examples/: advantages.hs  fact.hs  tutorial.hs
gui/: Clock.hs  Drag.hs  GtkGui.hs  GtkPerfTest.hs  GuiInternals.hs  LICENSE  Main.hs
test/: AllTests.hs  UnitTests.hs  VisualGraphAlgorithmTests.hs  VisualRenderingTests.hs  VisualTranslateTests.hs
test/test-input/: test_translate.hs
test/test-output/: .gitignore
