name:                glance
version:             0.1.0.0
synopsis:            Glance is a visual Haskell
description:         Please see README.md
homepage:            http://github.com/githubuser/glance#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Robbie Gleichman
maintainer:          rgleichman@gmail.com
copyright:           2015 Robbie Gleichman
category:            Visual Programming
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable glance-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glance
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-graphviz
                     , graphviz
                     , containers
  default-language:    Haskell2010
  Other-modules: Icons

test-suite glance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , glance
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rgleichman/glance
