name:                glance
version:             0.1.0.0
synopsis:            Glance is a visual Haskell
description:         Please see README.md
homepage:            https://github.com/rgleichman/glance#readme
license:             GPL-3
license-file:        LICENSE
author:              Robbie Gleichman
maintainer:          rgleichman@gmail.com
copyright:           2018 Robbie Gleichman
category:            Visual Programming
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable glance-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
                       -Wincomplete-record-updates
                       -Wmissing-export-lists
                       -Widentities
                       -Wpartial-fields
  build-depends:       base
                     , glance
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-graphviz
                     , graphviz
                     , containers
                     , fgl
                     , haskell-src-exts
                     , mtl
                     , semigroups
                     , diagrams-rasterific
                     , text
                     , svg-builder
                     , optparse-applicative
  default-language:    Haskell2010
  Other-modules: Icons
               , Rendering
               , Types
               , Util
               , Translate
               , TranslateCore
               , DrawingColors
               , GraphAlgorithms
               , SimplifySyntax
               , Constants

test-suite glance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             AllTests.hs
  build-depends:       base
                     , glance
                     , HUnit
                     , diagrams
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-graphviz
                     , graphviz
                     , containers
                     , fgl
                     , haskell-src-exts
                     , mtl
                     , semigroups
                     , text
                     , svg-builder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
                       -Wincomplete-record-updates
                       -Wmissing-export-lists
                       -Widentities
                       -Wpartial-fields
  default-language:    Haskell2010
  Other-modules: Icons
               , UnitTests
               , VisualRenderingTests
               , VisualTranslateTests
               , VisualGraphAlgorithmTests
               , Rendering
               , Types
               , Util
               , Translate
               , TranslateCore
               , DrawingColors
               , GraphAlgorithms
               , SimplifySyntax
               , Constants

source-repository head
  type:     git
  location: https://github.com/rgleichman/glance
